===============
Stalker Changes
===============

0.2.0.b9
========

* **WebUI:**
  
  * **Update:** All the date values are now returned as **UTC String** and
    stored in database as UTC datetime thus Stalker now supports Time Zones.

  * **JQueryGantt:**

    * **Update:** The gantt chart is now able to display much more info then
      before. There are two new modes for each of the Grid and Gantt parts of
      the Gantt Chart. Grid can be set to display *Task*s or *Resources* and
      the Gantt can set to display *Task*s or *TimeLog*s.
    * **Update:** Horizontal scrolling is disabled in gantt part of Gantt
      Chart. All the drawn tasks and links are now set in position with percent
      values, so they will stick and scale correctly when the split container
      is resized.
    * **Update:** Any task out of range is culled in gantt chart.

0.2.0.b8
========

* **SOM:**

  * **Update:** Renamed **Version.version_of** attribute to **Version.task**.
  * **Fix:** Fixed **Version.version_number** where it was not possible to have
    a version number bigger than 2.
  * **Fix:** In **db.setup()** Ticket statuses are only created if there aren't
    any.
  * **Fix:** Added **Vacation** class to the registered class list in
    stalker.db.

* **WebUI:**
  * **New:** Studio Page is created.It has Tasks and Resources as Tabs.
  * **New:** Update Studio function id added.
  * **New:** Thumbnail Add function is added to several objects' Summarize Pages.
      (Task, Asset, Shot, Sequence,Department, Group). List Page is also updated
      by new thumbnail information.
  * **Fix:** dgrid height attribute is updated and new div's are added for
      dgrid object.
  * **Fix:** Working hours for each day is taken from database in
      Studio Update Dialog.


* **WebUI:**

  * **Fix:** Fixed DGrid auto height problem.

0.2.0.b7
========

* **SOM:**

  * **Update:** **Task.schedule_constraint** is now reflected to the tjp file
    correctly.