@@ -86,6 +86,8 @@
 </head>
 <body class='claro'>
 
+{# TODO: Support Multiple monitors by allowing the user to detach content panels #}
+
 {# TEMPLATES #}
 <div id="gantEditorTemplates" style="display:none;">
     <div class="__template__" type="TASKSEDITHEAD"><!--
